--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="flex-space-between stick-top">
-        <div class="nav-item">
-            <div id="logo"></div>
+    <nav class="stick-top">
+        <div class="flex-space-between size">
+            <div class="nav-item">
+                <div id="logo"></div>
+            </div>
+            <a class="generic-title nav-item" href="textos.html">textos</a>
+            <a class="generic-title nav-item" href="index.html">home</a>
+            <a class="generic-title nav-item" href="imagens.html">imagens</a>
         </div>
-        <a class="generic-title nav-item" href="textos.html">textos</a>
-        <a class="generic-title nav-item" href="index.html">home</a>
-        <a class="generic-title nav-item" href="imagens.html">imagens</a>
     </nav>
-    
+    <main class="padding-around size">
+        <section class="padding-around">
+            <h1 class="generic-title">Sobre a página</h1>
+            <p class="generic-text">Essa é uma página criada para fins educativos e avaliativos do conhecimento sobre git do aluno Flávio Borges.</p>
+        </section>
+    </main>
 </body>
 </html>
