--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="stick-top">
+    <nav class="stick-top bg-white">
         <div class="flex-space-between size">
             <div class="nav-item">
                 <div id="logo"></div>
