--- a/imagens.html
+++ b/imagens.html
@@ -21,9 +21,9 @@
     <main class="padding-around">
         <section class="padding-around">
             <h1 class="generic-title">Algumas imagens</h1>
-            <img class="generic-img" alt="cachorro">
-            <img class="generic-img" alt="gato">
-            <img class="generic-img" alt="milho">
+            <img class="generic-img" src="img/dog.avif" alt="cachorro">
+            <img class="generic-img" src="img/gato.avif" alt="gato">
+            <img class="generic-img" src="img/milho.avif" alt="milho">
         </section>
     </main>
 </body>
