--- a/imagens.html
+++ b/imagens.html
@@ -8,7 +8,7 @@
     <title>Textos</title>
 </head>
 <body>
-    <nav class="stick-top bg-white">
+    <nav class="stick-top bg-white padding-bottom">
         <div class="flex-space-between size">
             <div class="nav-item">
                 <div id="logo"></div>
@@ -18,7 +18,7 @@
             <a class="generic-title nav-item" href="imagens.html">imagens</a>
         </div>
     </nav>
-    <main class="padding-around">
+    <main class="padding-around size">
         <section class="padding-around">
             <h1 class="generic-title">Algumas imagens</h1>
             <img class="generic-img" src="img/dog.avif" alt="cachorro">
