--- a/textos.html
+++ b/textos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="stick-top bg-white">
-        <div class="flex-space-between size">
+        <div class="flex-space-between size padding-bottom">
             <div class="nav-item">
                 <div id="logo"></div>
             </div>
